# socketio-chat

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
client-app/: package.json  pnpm-lock.yaml  vite.config.ts
client-app/src/: App.vue  main.ts
client-app/src/components/: HelloWorld.vue
client-app/src/pinia/: chat.ts  connection.ts  events.ts  index.ts  messages.ts  socket.ts  sounds.ts
socketio_chat/: main.py  models.py  socket.py
tests/: test_socketio_chat.py
